--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -12,4 +12,18 @@
     <artifactId>loginapp.repository</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.13.2</version>
+        </dependency>
+    </dependencies>
+
 </project>
